--- a/daw/proUno/proTres.html
+++ b/daw/proUno/proTres.html
@@ -30,9 +30,9 @@
     </div>
   </header>
   <!--*************************************************************--> 
-  <section>
+  <section class="dosColum">
     <div class="indice">     
-      <ol>
+      <ul>
         <li><a href="#3.1">Fundamentos de programación</a></li>
         <li><a href="#3.2">Introducción a la algoritmia y herramientas de diseño</a></li>
         <li><a href="#3.3">Ciclo de vida de un proyecto software</a></li>
@@ -45,7 +45,7 @@
         <li><a href="#3.10">Depuración de errores</a></li>
         <li><a href="#3.11">Documentación de programas</a></li>
         <li><a href="#3.12">Entornos de desarrollo de programas</a></li>
-      </ol>
+      </ul>
     </div>
   </section>
   <!--*************************************************************-->
