--- a/daw/proUno/proCinco.html
+++ b/daw/proUno/proCinco.html
@@ -516,22 +516,27 @@
           <b>Try/catch:</b> el bloque try contiene el código protegido que puede producir la excepción. <br>
           Los mensajes de error y acciones para corregir el error estarán en el bloque catch.
           <p>
-            using System.IO; <br>
-            string linea; <br>
-            try <br>
-            { <br>
-            FileStream fichero = new FileStream(“C:/fichero/ejercicio1. <br>
-            txt”, FileMode.Open, FileAccess.Read); <br>
-            StreamReader fs = new StreamReader(fichero); <br>
-            if ((linea= fs.ReadLine())!= null) <br>
-            Console.WriteLine(linea); <br>
-            fs.Close() <br>
-            fichero.Close(); <br>
-            } <br>
-            catch (Exception exp) <br>
-            { <br>
-            Console.WriteLine(“Ha habido un error: {0}”, exp.Message); <br>
-            } <br>
+<pre>
+  <code>
+    using System.IO;
+
+    string linea; 
+        try 
+        { 
+          FileStream fichero = new FileStream(“C:/fichero/ejercicio1. 
+          txt”, FileMode.Open, FileAccess.Read); 
+          StreamReader fs = new StreamReader(fichero); 
+          if ((linea= fs.ReadLine())!= null) 
+            Console.WriteLine(linea); 
+          fs.Close() 
+          fichero.Close(); 
+        } 
+        catch (Exception exp) 
+        { 
+      Console.WriteLine(“Ha habido un error: {0}”, exp.Message); 
+    } 
+  </code>
+</pre>
           </p>
         </li>
       </ul>
