--- a/daw/proUno/proCinco.html
+++ b/daw/proUno/proCinco.html
@@ -30,9 +30,9 @@
     </div>
   </header>
   <!--*************************************************************--> 
+  <div class="contenedor">
   <section>
     <div class="indice">
-      
       <ol>
         <li><a href="#5.1">Concepto y tipos de ficheros</a></li>
         <li><a href="#5.2">Diseño y modulación de las operaciones sobre ficheros</a></li>
@@ -543,5 +543,6 @@
     </article>
     <a class="btnArriba" href="#top">Arriba</a>
   </section>
+  </div>
 </body>
 </html>
