--- a/daw/proUno/proTres.html
+++ b/daw/proUno/proTres.html
@@ -30,7 +30,8 @@
     </div>
   </header>
   <!--*************************************************************--> 
-  <section class="dosColum">
+  <div class="contenedor">
+  <section>
     <div class="indice">     
       <ul>
         <li><a href="#3.1">Fundamentos de programación</a></li>
@@ -563,5 +564,6 @@
       </article>
       <a class="btnArriba" href="#top">Arriba</a>
     </section>
+    </div>
 </body>
 </html>
