--- a/daw/proUno/proCuatro.html
+++ b/daw/proUno/proCuatro.html
@@ -30,9 +30,9 @@
     </div>
   </header>
   <!--*************************************************************--> 
+  <div class="contenedor">
   <section>
     <div class="indice">
-      
       <ol>
         <li><a href="#4.1">Concepto</a></li>
         <li><a href="#4.2">Ventajas e inconvenientes</a></li>
@@ -350,5 +350,6 @@
     </article>
     <a class="btnArriba" href="#top">Arriba</a>
   </section>
+  </div>
 </body>
 </html>
