--- a/daw/proUno/programUno.html
+++ b/daw/proUno/programUno.html
@@ -30,6 +30,7 @@
     </div>
   </header>
   <!--*************************************************************--> 
+  <div class="contenedor">
   <section>
     <div class="indice">
       
@@ -228,5 +229,6 @@
     </article>
     <a class="btnArriba" href="#top">Arriba</a>
   </section>
+  </div>
 </body>
 </html>
