--- a/daw/sistemas/temaCinco.html
+++ b/daw/sistemas/temaCinco.html
@@ -31,9 +31,9 @@
     </div>
   </header>
   <!--*************************************************************-->
+  <div class="contenedor">
   <section>
     <div class="indice">
-      
       <ol>
         <li><a href="#5.1">Equipos de dominio</a></li>
         <li><a href="#5.2">Permisos y derechos</a></li>
@@ -93,5 +93,6 @@
       <a class="btnArriba" href="#top">Arriba</a>
     </article>
   </section>
+  </div>
 </body>
 </html> 
