--- a/daw/sistemas/temaCuatro.html
+++ b/daw/sistemas/temaCuatro.html
@@ -31,9 +31,9 @@
     </div>
   </header>
   <!--*************************************************************-->
+  <div class="contenedor">
   <section>
     <div class="indice">
-      
       <ol>
         <li><a href="#4.1">Estructura cliente-servidor</a></li>
         <li><a href="#4.2">Protocolo LDAP</a></li>
@@ -571,5 +571,6 @@
     </article>
     <a class="btnArriba" href="#top">Arriba</a>
   </section>
+  </div>
 </body>
 </html> 
