--- a/daw/sistemas/temaSeis.html
+++ b/daw/sistemas/temaSeis.html
@@ -31,9 +31,9 @@
     </div>
   </header>
   <!--*************************************************************-->
+  <div class="contenedor">
   <section>
     <div class="indice">
-      
       <ol>
         <li><a href="#6.1">Interpretación, análisis y elaboración de documentación técnica. Interpretación, análisis y elaboración de manuales de instalación</a></li>
         <li><a href="#6.2">Instalación y configuración de sistemas operativos y aplicaciones. Licencias de cliente y licencias de servidor</a></li>
@@ -87,5 +87,6 @@
     </article>
   <!--*************************************************************-->
   </section>
+  </div>
 </body>
 </html> 
