--- a/daw/sistemas/temaTres.html
+++ b/daw/sistemas/temaTres.html
@@ -31,9 +31,9 @@
     </div>
   </header>
   <!--*************************************************************-->
+  <div class="contenedor">
   <section>
     <div class="indice">
-      
       <ol>
         <li><a href="#3.1">Sistemas de archivos</a></li>
         <li><a href="#3.2">Tipos de sistemas de archivos</a></li>
@@ -552,5 +552,6 @@
     </article>
     <a class="btnArriba" href="#top">Arriba</a>
   </section>
+  </div>
 </body>
 </html> 
