--- a/daw/sistemas/temaDos.html
+++ b/daw/sistemas/temaDos.html
@@ -31,6 +31,7 @@
     </div>
   </header>
   <!--*************************************************************-->
+  <div class="contenedor">
   <section>
     <div class="indice">
       
@@ -377,5 +378,6 @@
     </article>
     <a class="btnArriba" href="#top">Arriba</a>
   </section>
+  </div>
 </body>
 </html> 
