--- a/daw/proUno/programUno.html
+++ b/daw/proUno/programUno.html
@@ -11,9 +11,9 @@
   <title>Programación I</title>
 </head>
 <body>
-  <header>
+  <header> <!-- HEADER -->
     <a name="top"></a>
-    <div class="navtop">
+    <div class="navtop"> <!-- BARRA SUPERIOR -->
       <span id="apuntes">Apuntes</span>
       <span>Programación I</span>
       <span><a href="../../index.html">Principal</a></span>
@@ -28,23 +28,21 @@
     <div class="tituloTema">
       <h1>Tema 1.- Introducción a la programación</h1>
     </div>
-  </header>
-  <!--*************************************************************--> 
+  </header><!-- CONTENEDOR --> 
   <div class="contenedor">
-  <section>
-    <div class="indice">
-      
-      <ol>
-        <li><a href="#1.1">Representaciones gráficas</a></li>
-        <li><a href="#1.2">Características de los diagramas de flujo</a></li>
-        <li><a href="#1.3">Características del pseudocódigo</a></li>
-        <li><a href="#1.4">Comunicación de un sistema informático</a></li>
-        <li><a href="#1.5">Características del lenguaje de alto nivel</a></li>
-        <li><a href="#1.6">Características del lenguaje de bajo nivel</a></li>
-        <li><a href="#1.7">Lenguajes compilados e interpretados</a></li>
-      </ol>
-    </div>
-  </section>
+    <section> <!-- INDICE -->
+      <div class="indice">
+        <ol>
+          <li><a href="#1.1">Representaciones gráficas</a></li>
+          <li><a href="#1.2">Características de los diagramas de flujo</a></li>
+          <li><a href="#1.3">Características del pseudocódigo</a></li>
+          <li><a href="#1.4">Comunicación de un sistema informático</a></li>
+          <li><a href="#1.5">Características del lenguaje de alto nivel</a></li>
+          <li><a href="#1.6">Características del lenguaje de bajo nivel</a></li>
+          <li><a href="#1.7">Lenguajes compilados e interpretados</a></li>
+        </ol>
+      </div>
+    </section>
   <!--*************************************************************-->
   <section>
     <h3 class="subTitulo_3">Introducción</h3>
