--- a/daw/proUno/programUno.html
+++ b/daw/proUno/programUno.html
@@ -30,19 +30,17 @@
     </div>
   </header><!-- CONTENEDOR --> 
   <div class="contenedor">
-    <section> <!-- INDICE -->
-      <div class="indice">
-        <ol>
-          <li><a href="#1.1">Representaciones gráficas</a></li>
-          <li><a href="#1.2">Características de los diagramas de flujo</a></li>
-          <li><a href="#1.3">Características del pseudocódigo</a></li>
-          <li><a href="#1.4">Comunicación de un sistema informático</a></li>
-          <li><a href="#1.5">Características del lenguaje de alto nivel</a></li>
-          <li><a href="#1.6">Características del lenguaje de bajo nivel</a></li>
-          <li><a href="#1.7">Lenguajes compilados e interpretados</a></li>
-        </ol>
-      </div>
-    </section>
+    <div class="indice"> <!-- INDICE --> <!-- Eliminamos secction -->
+      <ol>
+        <li><a href="#1.1">Representaciones gráficas</a></li>
+        <li><a href="#1.2">Características de los diagramas de flujo</a></li>
+        <li><a href="#1.3">Características del pseudocódigo</a></li>
+        <li><a href="#1.4">Comunicación de un sistema informático</a></li>
+        <li><a href="#1.5">Características del lenguaje de alto nivel</a></li>
+        <li><a href="#1.6">Características del lenguaje de bajo nivel</a></li>
+        <li><a href="#1.7">Lenguajes compilados e interpretados</a></li>
+      </ol>
+    </div>
   <!--*************************************************************-->
   <section>
     <h3 class="subTitulo_3">Introducción</h3>
