--- a/daw/proUno/programUno.html
+++ b/daw/proUno/programUno.html
@@ -30,7 +30,7 @@
     </div>
   </header><!-- CONTENEDOR --> 
   <div class="contenedor">
-    <div class="indice"> <!-- INDICE --> <!-- Eliminamos secction -->
+    <div class="indice"> <!-- INDICE -->
       <ol>
         <li><a href="#1.1">Representaciones gráficas</a></li>
         <li><a href="#1.2">Características de los diagramas de flujo</a></li>
