--- a/daw/proUno/programUno.html
+++ b/daw/proUno/programUno.html
@@ -41,8 +41,7 @@
         <li><a href="#1.7">Lenguajes compilados e interpretados</a></li>
       </ol>
     </div>
-  <!--*************************************************************-->
-  <section>
+  <section> <!-- INTRO -->
     <h3 class="subTitulo_3">Introducción</h3>
     <article>
       <p>
@@ -61,28 +60,27 @@
     <h4 class="subTitulo_4">Caractéristicas de un programa:</h4>
     <article>
       <ul>
-        <li>Deber ser finito: formado por un conjunto limitado de
+        <li><b>finito:</b> formado por un conjunto limitado de
           sentencias.</li>
-        <li>Debe ser legible: es importante crear códigos limpios y
+        <li><b>legible:</b> es importante crear códigos limpios y
           fáciles de leer con tabulaciones y espacios que diferencien
           las partes del programa.</li>
-        <li>Debe ser modificable: debe ser sencillo el proceso de actualización
+        <li><b>modificable:</b> debe ser sencillo el proceso de actualización
           o modificación ante nuevas necesidades.</li>
-        <li>Debe ser eficiente: debemos crear programas que ocupen
+        <li><b>eficiente:</b> debemos crear programas que ocupen
           poco espacio en memoria y se ejecuten rápidamente.</li>
-        <li>Debe ser modulable: debemos realizar algoritmos que se
+        <li><b>modulable:</b> debemos realizar algoritmos que se
           dividan a su vez en subalgoritmos de forma que se disponga
           de un grupo principal desde el que llamaremos al
           resto. Así, incitamos a la reutilización de código.</li>
-        <li>Debe ser estructurado: será fácil de leer y modificar, 
+        <li><b>estructurado:</b> será fácil de leer y modificar, 
           y estará compuesto de subprogramas que permitirán la 
           reutilización de código.</li>
       </ul>
     </article>
     <a class="btnArriba" href="#top">Arriba</a>
   </section>
-    <!--*************************************************************-->
-  <section>
+  <section> <!-- PUNTO 1.1 -->
     <a name="1.1"></a>
     <h3 class="subTitulo_3">Representaciones gráficas</h3>
     <article>
@@ -108,8 +106,7 @@
     </article>
     <a class="btnArriba" href="#top">Arriba</a>
   </section>
-    <!--*************************************************************-->
-  <section>
+  <section> <!-- PUNTO 1.2 -->
     <a name="1.2"></a>
     <h3 class="subTitulo_3">Características de los diagramas de flujo</h3>
     <article>
@@ -126,8 +123,7 @@
     </article>
     <a class="btnArriba" href="#top">Arriba</a>
   </section>
-    <!--*************************************************************-->
-  <section>
+  <section> <!-- PUNTO 1.3 -->
     <a name="1.3"></a>
     <h3 class="subTitulo_3">Características del pseudocódigo</h3>
     <article>
@@ -141,8 +137,7 @@
     </article>
     <a class="btnArriba" href="#top">Arriba</a>
   </section>
-    <!--*************************************************************-->
-  <section>
+  <section> <!-- PUNTO 1.4 -->
     <a name="1.4"></a>
     <h3 class="subTitulo_3">Comunicación de un sistema informático</h3>
     <article>
@@ -161,8 +156,7 @@
     </article>
     <a class="btnArriba" href="#top">Arriba</a>
   </section>
-    <!--*************************************************************-->
-  <section>
+  <section> <!-- PUNTO 1.5 -->
     <a name="1.5"></a>
     <h3 class="subTitulo_3">Características del lenguaje de alto nivel</h3>
     <article>
@@ -175,8 +169,7 @@
     </article>
     <a class="btnArriba" href="#top">Arriba</a>
   </section>
-    <!--*************************************************************-->
-  <section>  
+  <section> <!-- PUNTO 1.6 -->
     <a name="1.6"></a>
     <h3 class="subTitulo_3">Características del lenguaje de bajo nivel</h3>
     <article>
@@ -191,8 +184,7 @@
     </article>
     <a class="btnArriba" href="#top">Arriba</a>
   </section>
-    <!--*************************************************************-->
-  <section>
+  <section> <!-- PUNTO 1.7 -->
     <a name="1.7"></a>
     <h3 class="subTitulo_3">Lenguajes compilados e interpretados</h3>
     <article>
@@ -225,6 +217,6 @@
     </article>
     <a class="btnArriba" href="#top">Arriba</a>
   </section>
-  </div>
+  </div> <!-- FIN CONTENEDOR -->
 </body>
 </html>
