--- a/daw/proUno/programUno.html
+++ b/daw/proUno/programUno.html
@@ -60,20 +60,20 @@
     <h4 class="subTitulo_4">Caractéristicas de un programa:</h4>
     <article>
       <ul>
-        <li><b>finito:</b> formado por un conjunto limitado de
+        <li><b>Finito:</b> formado por un conjunto limitado de
           sentencias.</li>
-        <li><b>legible:</b> es importante crear códigos limpios y
+        <li><b>Legible:</b> es importante crear códigos limpios y
           fáciles de leer con tabulaciones y espacios que diferencien
           las partes del programa.</li>
-        <li><b>modificable:</b> debe ser sencillo el proceso de actualización
+        <li><b>Modificable:</b> debe ser sencillo el proceso de actualización
           o modificación ante nuevas necesidades.</li>
-        <li><b>eficiente:</b> debemos crear programas que ocupen
+        <li><b>Eficiente:</b> debemos crear programas que ocupen
           poco espacio en memoria y se ejecuten rápidamente.</li>
-        <li><b>modulable:</b> debemos realizar algoritmos que se
+        <li><b>Modulable:</b> debemos realizar algoritmos que se
           dividan a su vez en subalgoritmos de forma que se disponga
           de un grupo principal desde el que llamaremos al
           resto. Así, incitamos a la reutilización de código.</li>
-        <li><b>estructurado:</b> será fácil de leer y modificar, 
+        <li><b>Estructurado:</b> será fácil de leer y modificar, 
           y estará compuesto de subprogramas que permitirán la 
           reutilización de código.</li>
       </ul>
@@ -93,15 +93,15 @@
     <h4 class="subTitulo_4">Debemos usar una serie de símbolos:</h4>
     <article>
       <ul>
-        <li>Rectángulo esquinas redondas: Indican inicio o fin de programa.</li>
-        <li>Rectángulo: Representan una instrucción, un paso a dar o un proceso.</li>
-        <li>Paralelogramo: Operaciones de entrada/salida de datos.</li>
-        <li>Rombo: Usaremos este símbolo si nos encontramos en un punto en el
+        <li><b>Rectángulo esquinas redondas:</b> Indican inicio o fin de programa.</li>
+        <li><b>Rectángulo:</b> Representan una instrucción, un paso a dar o un proceso.</li>
+        <li><b>Paralelogramo:</b> Operaciones de entrada/salida de datos.</li>
+        <li><b>Rombo:</b> Usaremos este símbolo si nos encontramos en un punto en el
           que se realizará una u otra acción en función de una decisión.</li>
-        <li>Circulo: Conector. Permite unir diferentes zonas del diagrama de
+        <li><b>Circulo:</b> Conector. Permite unir diferentes zonas del diagrama de
           forma que se redefine el flujo de ejecución hacia otra parte
           del diagrama.</li>
-        <li>Flechas: para indicar la dirección de flujo.</li>
+        <li><b>Flechas:</b> para indicar la dirección de flujo.</li>
       </ul>
     </article>
     <a class="btnArriba" href="#top">Arriba</a>
