--- a/daw/proUno/proDos.html
+++ b/daw/proUno/proDos.html
@@ -11,9 +11,9 @@
   <title>Programación I</title>
 </head>
 <body>
-  <header>
+  <header> <!-- HEADER -->
     <a name="top"></a>
-    <div class="navtop">
+    <div class="navtop"> <!-- BARRA SUPERIOR -->
       <span id="apuntes">Apuntes</span>
       <span>Programación I</span>
       <span><a href="../../index.html">Principal</a></span>
@@ -28,12 +28,9 @@
     <div class="tituloTema">
       <h1>Tema 2.- Estructura de un programa informático</h1>
     </div>
-  </header>
-  <!--*************************************************************--> 
+  </header> <!-- CONTENEDOR -->
   <div class="contenedor">
-  <section>
     <div class="indice">
-      
       <ol>
         <li><a href="#2.1">Bloques de un programa de código</a></li>
         <li><a href="#2.2">Variables. Usos y tipos</a></li>
@@ -43,9 +40,7 @@
         <li><a href="#2.6">Comentarios al código</a></li>
       </ol>
     </div>
-  </section>
-  <!--*************************************************************-->
-  <section>
+  <section> <!-- INTRO -->
     <a name="2.0"></a>
     <h3 class="subTitulo_3">Introducción</h3>
     <article>
@@ -60,8 +55,7 @@
     </article>
     <a class="btnArriba" href="#top">Arriba</a>
   </section>
-    <!--*************************************************************-->
-  <section>  
+  <section> <!-- PUNTO 2.1 -->
     <a name="2.1"></a>
     <h3 class="subTitulo_3">Bloques de un programa informático</h3>
     <article>
@@ -88,8 +82,7 @@
     </article>
     <a class="btnArriba" href="#top">Arriba</a>
   </section>
-    <!--*************************************************************-->
-  <section>  
+  <section> <!-- PUNTO 2.2 -->  
     <a name="2.2"></a>
     <h3 class="subTitulo_3">Variables. Usos y Tipos</h3>
     <article>
@@ -140,8 +133,7 @@
     </article>
     <a class="btnArriba" href="#top">Arriba</a>
   </section>
-    <!--*************************************************************-->
-  <section>
+  <section> <!-- PUNTO 2.3 -->
     <a name="2.3"></a>
     <h3 class="subTitulo_3">Constantes y Literales. Tipos y utilidades</h3>
     <h4 >Constantes</h4>
@@ -181,8 +173,7 @@
     </article>
     <a class="btnArriba" href="#top">Arriba</a>
   </section>
-    <!--*************************************************************-->
-  <section>  
+  <section> <!-- PUNTO 2.4 -->
     <a name="2.4"></a>
     <h3 class="subTitulo_3">Operadores del lenguaje de programación</h3>
     <h4 >Operadores aritméticos</h4>
@@ -301,8 +292,7 @@
     </article>
     <a class="btnArriba" href="#top">Arriba</a>
   </section>
-    <!--*************************************************************-->
-  <section>  
+  <section> <!-- PUNTO 2.5 -->
     <a name="2.5"></a>
     <h3 class="subTitulo_3">Conversiones de tipos de clase</h3>
     <article>
@@ -362,8 +352,7 @@
     </article>
     <div class="btnArriba"><a href="#top">Arriba</a></div>
   </section>
-    <!--*************************************************************-->
-  <section>
+  <section> <!-- PUNTO 2.6 -->
     <a name="2.6"></a>
     <h3 class="subTitulo_3">Comentario al código</h3>
     <article>
@@ -376,6 +365,6 @@
     </article>
     <a class="btnArriba" href="#top">Arriba</a>
   </section>
-  </div>
+  </div> <!-- FIN CONTENEDOR -->
 </body>
 </html>
