--- a/daw/proUno/proDos.html
+++ b/daw/proUno/proDos.html
@@ -78,7 +78,7 @@
     <article>
       <p>Para la entrada de datos, utilizaremos el método <b>ReadLine()</b>. Este leerá el dato introducido por el usuario y devolverá un dato de tipo cadena (string).</p>
       <p>Otro método es <b>Read()</b>, que leerá el dato introducido y devolverá un dato tipo entero (int).</p>
-      <p>También podemos utilizar <b>ReadKey(), aquí se obtiene el carácter presionado por el usuario y se muestra esta tecla por la pantalla.</b></p>
+      <p>También podemos utilizar <b>ReadKey()</b>, aquí se obtiene el carácter presionado por el usuario y se muestra esta tecla por la pantalla.</p>
     </article>
     <a class="btnArriba" href="#top">Arriba</a>
   </section>
