--- a/daw/proUno/proDos.html
+++ b/daw/proUno/proDos.html
@@ -106,7 +106,7 @@
       <p>Tipos matriz: Unidimensionales y Multidimensionales.</p>
       <p>Para <b>definir una variable</b>, primero necesitamos conocer el tipo de datos que va almacenar y el nombre que le vamos asignar. Es importante que el nombre sea identificativo con su contenido.</p>
     </article>
-    <h4 class="subTitulo_4">Para <b>identificar a una variable</b>, debemos seguir una serie de normas:</h4>
+    <h4 class="subTitulo_4">Para identificar a una variable, debemos seguir una serie de normas:</h4>
     <article>  
       <ul>
         <li>Debe comenzar por un carácter (letra o "_").</li>
