--- a/daw/proUno/proDos.html
+++ b/daw/proUno/proDos.html
@@ -136,7 +136,7 @@
   <section> <!-- PUNTO 2.3 -->
     <a name="2.3"></a>
     <h3 class="subTitulo_3">Constantes y Literales. Tipos y utilidades</h3>
-    <h4 >Constantes</h4>
+    <h4 class="subTitulo_4">Constantes</h4>
     <article>  
       <p>Son aquellas cuyo contenido no se puede alterar a lo largo del programa. La palabra reservada es <b>const</b>, y se definen fuera del cuerpo de cualquier función, normalmente al principio del programa.</p>
     </article>
