--- a/daw/proUno/proDos.html
+++ b/daw/proUno/proDos.html
@@ -140,8 +140,9 @@
     <article>  
       <p>Son aquellas cuyo contenido no se puede alterar a lo largo del programa. La palabra reservada es <b>const</b>, y se definen fuera del cuerpo de cualquier función, normalmente al principio del programa.</p>
     </article>
+    <h4 class="subTitulo_4">Literales</h4>
     <article>
-      <p><b>Literales:</b> Así podemos representar de forma explícita todos los valores que pueden tomar los tipos básicos del lenguaje.</p>
+      <p>Así podemos representar de forma explícita todos los valores que pueden tomar los tipos básicos del lenguaje.</p>
     </article>
     <article>
       <p><b>Literales enteros:</b></p>
