--- a/daw/proUno/proDos.html
+++ b/daw/proUno/proDos.html
@@ -64,7 +64,7 @@
       <p>Primero nos crea la clase <b>program</b>. Una <b>clase</b> es una estructura de datos que está compuesta por atributos o variables y métodos o funciones.</p>
       <p>El método principal se denomina <b>Main</b>. Será el primero en ejecutarse en nuestro programa. Este tiene una serie de argumentos, que son cadenas de caracteres que podemos pasar línea de comandos.</p>
     </article>
-    <h4 >Entrada y salida por pantalla</h4>
+    <h4 class="subTitulo_4">Entrada y salida por pantalla</h4>
     <article>
       <p>Emplearemos la clase <b>Console</b> para establecer la comunicación entre usuario y el programa.</p>
       <p>Para la salida por pantalla, vamos utilizar los métodos de esta clase, <b>Write</b> y <b>Writeline:</b></p>
@@ -89,7 +89,7 @@
       <p>Una <b>variable</b> es una estructura de datos que ocupan un espacio en memoria y pueden variar a lo largo de un programa.</p>
       <p>Cuando <b>declaramos una variable</b> establecemos el tipo de dato (entero, cadena, carácter, etc) y su identificador.</p>
     </article>
-    <h4 >Tipos de datos en C#:</h4>
+    <h4 class="subTitulo_4">Tipos de datos en C#:</h4>
     <article>
       <ul>
         <li><b>Enteros con signo:</b> Sbyte, short, int, long.</li>
@@ -177,7 +177,7 @@
   <section> <!-- PUNTO 2.4 -->
     <a name="2.4"></a>
     <h3 class="subTitulo_3">Operadores del lenguaje de programación</h3>
-    <h4 >Operadores aritméticos</h4>
+    <h4 class="subTitulo_4">Operadores aritméticos</h4>
     <article>  
       <ul>
         <li>+ Suma aritmética de dos valores.</li>
@@ -200,7 +200,7 @@
         <li>De suma y resta.</li>
       </ol>
     </article>
-    <h4 >Operadores booleanos</h4>
+    <h4 class="subTitulo_4">Operadores booleanos</h4>
     <article>
       <ul>
         <li>& AND lógico. Evalúa ambos operandos.</li>
@@ -251,7 +251,7 @@
     <article>
       <p><b>El operador !</b> calcula la negación de su operando, si el operando es true, devolverá el valor false y viceversa.</p>
     </article>
-    <h4 >Operadores de comparación e igualdad</h4>
+    <h4 class="subTitulo_4">Operadores de comparación e igualdad</h4>
     <article>
       <table>
         <caption>Operadores de comparación</caption>
@@ -300,15 +300,15 @@
       <p>Cuando declaramos una variable, no se puede volver a declarar, ni asignar un valor de otro tipo. En ocasiones, podemos convertir el valor de una variable de un tipo a otro. Podemos tener diferentes clases de conversiones:</p>
       <ul>
         <li><b>Conversiones implícitas:</b> son aquellas que se producen cuadno el valor que se va a almacenar se puede almacenar en una variable sin truncarse ni redondearse. Por ejemplo almacenar una variable int dentro de una variable long.</li>
-        <li><b>Conversiones explícitas: cuando no hay posibilidad de realizar una conversión implícita debemos indicar al compilador que se pretende realizar una conversión que pueda producir una pérdida de datos.</b></li>
+        <li><b>Conversiones explícitas:</b> cuando no hay posibilidad de realizar una conversión implícita debemos indicar al compilador que se pretende realizar una conversión que pueda producir una pérdida de datos.</li>
       </ul>
     </article>
-    <h4 >Parse y TryParse</h4>
+    <h4 class="subTitulo_4">Parse y TryParse</h4>
     <article>
       <p>Con estos métodos podemos convertir una cadena en varios tipos numéricos: int, decimal, double...</p>
       <p>El método Parse devuelve el número convertido. TryParse devuelve un valor booleano indicado si la conversión se realizó correctamente o no, y devuelve el número convertido.</p>
     </article>
-    <h4 >Convert</h4>
+    <h4 class="subTitulo_4">Convert</h4>
     <article>
     <p>Es una clase que convierte un tipo de datos en otro. Algunos métodos son:</p>
       <table>
