--- a/daw/proUno/proCuatro.html
+++ b/daw/proUno/proCuatro.html
@@ -28,10 +28,8 @@
     <div class="tituloTema">
       <h1>Tema 4.- Programación Modular</h1>
     </div>
-  </header>
-  <!--*************************************************************--> 
+  </header> 
   <div class="contenedor">
-  <section>
     <div class="indice">
       <ol>
         <li><a href="#4.1">Concepto</a></li>
@@ -46,8 +44,6 @@
         <li><a href="#4.10">Introducción al concepto de recursividad</a></li>
       </ol>
     </div>
-  </section>
-  <!--*************************************************************-->
   <section>
     <a name="4.1"></a>
     <h3 class="subTitulo_3">Concepto</h3>
@@ -61,7 +57,6 @@
     </article>
     <a class="btnArriba" href="#top">Arriba</a>
   </section>
-    <!--*************************************************************-->
   <section>
     <a name="4.2"></a>
     <h3 class="subTitulo_3">Ventajas e inconvenientes</h3>
@@ -82,8 +77,7 @@
       </ul>
     </article>
     <a class="btnArriba" href="#top">Arriba</a>
-  </section>  
-    <!--*************************************************************-->
+  </section>
   <section>  
     <a name="4.3"></a>
     <h3 class="subTitulo_3">Análisis descendente (top down)</h3>
@@ -104,7 +98,6 @@
     </article>
     <a class="btnArriba" href="#top">Arriba</a>
   </section>
-    <!--*************************************************************-->
   <section>
     <a name="4.4"></a>
     <h3 class="subTitulo_3">Modulación de programas. Subprogramas</h3>
@@ -129,7 +122,6 @@
     </article>
     <a class="btnArriba" href="#top">Arriba</a>
   </section>
-    <!--*************************************************************-->
   <section>
     <a name="4.5"></a>
     <h3 class="subTitulo_3">Llamadas a funciones (métodos). Tipos y funcionamiento</h3>
@@ -141,11 +133,15 @@
       <p>
         Las funciones se definen como un conjunto de instrucciones, delimitadas por llaves, que tienen un nombre y son de un tipo específico.
       </p>
-      <p class="codigo">
-        Modificadores Tipo NombreFunción (Parámetros de entrada) {
-          Código de la función
-          Return expresión;
-          }
+      <p>
+        <pre>
+          <code>
+            Modificadores Tipo NombreFunción (Parámetros de entrada) {
+              Código de la función
+              Return expresión;
+            }
+          </code>
+        </pre>
       </p>
     </article>
     <article>
@@ -179,10 +175,14 @@
       <p>
         Para referenciar que ese método no nos devuelve un valor, utilizaremos la sentencia void.
       </p>
-      <p class="codigo">
-        Modificadores void NombreProcedimiento (Parámetros de entrada ){
-          //Código del procedimiento
-          }
+      <p>
+        <pre>
+          <code>
+            Modificadores void NombreProcedimiento (Parámetros de entrada ){
+              //Código del procedimiento
+            }
+          </code>
+        </pre>
       </p>
     </article>
     <h4 class="subTitulo_4">Paso de parámetros. Paso por valor y paso por referencia</h4>
@@ -212,7 +212,6 @@
     </article>
     <a class="btnArriba" href="#top">Arriba</a>
   </section>
-    <!--*************************************************************-->
   <section>
     <a name="4.6"></a>
     <h3 class="subTitulo_3">Ámbito de las llamadas a funciones</h3>
@@ -245,7 +244,6 @@
     </article>
     <a class="btnArriba" href="#top">Arriba</a>
   </section>
-    <!--*************************************************************-->
   <section>
     <a name="4.7"></a>
     <h3 class="subTitulo_3">Prueba, depuración y comentarios de programas</h3>
@@ -297,7 +295,6 @@
     </article>
     <a class="btnArriba" href="#top">Arriba</a>
   </section>
-    <!--*************************************************************-->
   <section>
     <a name="4.8"></a>
     <h3 class="subTitulo_3">Concepto de librerías</h3>
@@ -324,7 +321,6 @@
     </article>
     <a class="btnArriba" href="#top">Arriba</a>
   </section>
-    <!--*************************************************************-->
   <section>
     <a name="4.9"></a>
     <h3 class="subTitulo_3">Uso de librerías</h3>
@@ -335,7 +331,6 @@
     </article>
     <a class="btnArriba" href="#top">Arriba</a>
   </section>
-    <!--*************************************************************-->
   <section>
     <a name="4.10"></a>
     <h3 class="subTitulo_3">Introducción al concepto de recursividad</h3>
